--- a/incrowd/frontend/index.html
+++ b/incrowd/frontend/index.html
@@ -121,38 +121,26 @@
 
 </md-sidenav>
 </div>
-<!-- build:js js/jquery-foundation.min.js -->
-<script src="/bower_components/jquery/dist/jquery.js"></script>
-<!--
-<script src="/bower_components/modernizr/modernizr.js"></script>
-<script src="/bower_components/foundation/js/foundation.js"></script>
-<script
-    src="/bower_components/foundation/js/foundation/foundation.offcanvas.js"></script>
-<script src="/bower_components/jquery-cookie/jquery.cookie.js"></script>-->
-<!-- endbuild -->
 <!-- build:js js/angular.min.js -->
+<script src="/bower_components/jquery/dist/jquery.js"></script>
+<script src="/bower_components/jquery-cookie/jquery.cookie.js"></script>
 <script src="/bower_components/angular/angular.js"></script>
-<script src="/bower_components/angular-aria/angular-aria.js"></script>
-<script src="/bower_components/angular-animate/angular-animate.js"></script>
-<script src="/bower_components/hammerjs/hammer.js"></script>
-<script src="/bower_components/angular-material/angular-material.js"></script>
 <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="/bower_components/angular-resource/angular-resource.js"></script>
 <script src="/bower_components/angular-route/angular-route.js"></script>
 <script src="/bower_components/angular-touch/angular-touch.js"></script>
-<script
-    src="/bower_components/angular-local-storage/angular-local-storage.js"></script>
+<script src="/bower_components/angular-local-storage/angular-local-storage.js"></script>
 <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
-<script
-    src="/bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-<script
-    src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+<script src="/bower_components/angular-aria/angular-aria.js"></script>
+<script src="/bower_components/angular-animate/angular-animate.js"></script>
+<script src="/bower_components/hammerjs/hammer.js"></script>
+<script src="/bower_components/angular-material/angular-material.js"></script>
+<script src="/bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+<script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 <script src="/bower_components/angular-off-click/offClick.js"></script>
 <script src="/bower_components/angular-elastic/elastic.js"></script>
-
 <script src="/js/pusher.min.js"></script>
 <!-- endbuild -->
-
 <script src="js/config.js"></script>
 
 <!-- build:js js/incrowd.min.js -->
