--- a/incrowd/frontend/index.html
+++ b/incrowd/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport"
         content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
-  <meta name="theme-color" content="#03A9F4">
+  <meta name="theme-color" content="#607d8b">
   <title>SlasherTraxx</title>
   <style type="text/css">@charset "UTF-8";
   [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
