Adding badge to favicon with notification count

--- a/incrowd/frontend/index.html
+++ b/incrowd/frontend/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport"
         content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
   <meta name="theme-color" content="#607d8b">
+  <link rel="shortcut icon" type="image/png" href="favicon.ico">
   <title>SlasherTraxx</title>
   <style type="text/css">@charset "UTF-8";
   [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
@@ -139,6 +140,7 @@
 <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 <script src="bower_components/angular-off-click/offClick.js"></script>
 <script src="bower_components/angular-elastic/elastic.js"></script>
+<script src="bower_components/favico.js/favico.js"></script>
 <script src="js/pusher.min.js"></script>
 <!-- endbuild -->
 <script src="js/config.js"></script>
