--- a/incrowd/frontend/index.html
+++ b/incrowd/frontend/index.html
@@ -148,6 +148,8 @@
 <!-- build:js js/incrowd.min.js -->
 <script src="controllers/auth.js"></script>
 <script src="services/pusher.js"></script>
+<script src="services/config.js"></script>
+<script src="services/user.js"></script>
 
 <script src="controllers/signup.js"></script>
 <script src="directives/djangle.js"></script>
@@ -163,7 +165,7 @@
 <script src="controllers/poll.js"></script>
 
 <script src="js/app.js"></script>
-<script src="js/controllers.js"></script>
+<script src="js/incrowd_controllers.js"></script>
 
 <!-- endbuild -->
 <script>
