--- a/incrowd/frontend/src/index.html
+++ b/incrowd/frontend/src/index.html
@@ -24,10 +24,8 @@
 </head>
 <body layout="vertical" ng-controller="UserCtrl">
 
-<md-sidenav class="md-sidenav-left nav-sidenav"
-            md-component-id="left"
-            md-is-locked-open="$mdMedia('gt-md')"
-            ng-cloak>
+<md-sidenav class="md-sidenav-left nav-sidenav" md-component-id="left"
+            md-is-locked-open="$mdMedia('gt-md')" ng-cloak>
   <md-toolbar class="md-whiteframe-z1">
 
   </md-toolbar>
@@ -118,6 +116,8 @@
 <!-- build:js(src) scripts/app.js -->
 <!-- inject:js -->
 <!-- endinject -->
+<!-- settings:js -->
+<!-- endinject -->
 <!-- endbuild -->
 
 <!-- build:js(src) scripts/cache.js -->
@@ -125,6 +125,7 @@
 <!-- angular templates will be automatically converted in js and inserted here -->
 <!-- endinject -->
 <!-- endbuild -->
+
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
