Fixing build system to use config JSON

--- a/incrowd/frontend/src/index.html
+++ b/incrowd/frontend/src/index.html
@@ -22,7 +22,7 @@
   <!-- endinject -->
   <!-- endbuild -->
 </head>
-<body layout="vertical" ng-controller="UserCtrl">
+<body layout="vertical">
 
 <md-sidenav class="md-sidenav-left nav-sidenav" md-component-id="left"
             md-is-locked-open="$mdMedia('gt-md')" ng-cloak>
@@ -116,7 +116,7 @@
 <!-- build:js(src) scripts/app.js -->
 <!-- inject:js -->
 <!-- endinject -->
-<!-- settings:js -->
+<!-- config:js -->
 <!-- endinject -->
 <!-- endbuild -->
 
