Moving angular, removing unused deps

--- a/incrowd/frontend/src/index.html
+++ b/incrowd/frontend/src/index.html
@@ -120,7 +120,7 @@
 
 </md-sidenav>
 
-<script src="app/js/angular.js"></script>
+<script src="angular.js"></script>
 <!-- build:js(src) scripts/vendor.js -->
 <!-- bower:js -->
 <!-- run `gulp wiredep` to automaticaly populate bower script dependencies -->
