Fix notification handling
Make clear notifications button work, make binding to
Notifications.notifications work properly, make notifcations sidebar
chip update correctly. Cache initial poll lookup and make it work
with $q.all() in Config.

Also add a close button for sidenav on small screens.

--- a/incrowd/frontend/src/index.html
+++ b/incrowd/frontend/src/index.html
@@ -62,6 +62,7 @@
     <a class="menu-item menu-title" ng-controller="AuthCtrl"
        ng-click="logout()">Log
                            out</a>
+    <md-button hide-gt-sm class="md-raised" ng-click="close()">Close</md-button>
     <!--<a class="menu-item menu-title" ng-click="toggleLeft()">Hide Bar</a>-->
   </md-content>
 </md-sidenav>
