Move js/css paths to gulpfile, fix injection
Injection wasn't working correctly all of the sudden. Using named
injections fixes the problem. Move the list of files the paths to
simplify resuability in the future.

--- a/incrowd/frontend/src/index.html
+++ b/incrowd/frontend/src/index.html
@@ -26,7 +26,7 @@
   <!-- build:css(src) assets/incrowd.css -->
   <!-- bower:css -->
   <!-- endbower -->
-  <!-- inject:css -->
+  <!-- styles:css -->
   <!-- endinject -->
   <!-- endbuild -->
 </head>
@@ -129,7 +129,7 @@
 <!-- endbuild -->
 
 <!-- build:js(src) scripts/app.js -->
-<!-- inject:js -->
+<!-- angular:js -->
 <!-- endinject -->
 <!-- config:js -->
 <!-- endinject -->
