--- a/incrowd/frontend/src/index.html
+++ b/incrowd/frontend/src/index.html
@@ -59,7 +59,7 @@
     <a class="menu-item menu-title"
        ui-sref="invite"
        ui-sref-active="tab-active">Invite</a>
-    <a class="menu-item menu-title" ng-controller="AuthCtrl"
+    <a class="menu-item menu-title" ng-controller="LogoutCtrl"
        ng-click="logout()">Log
                            out</a>
     <md-button hide-gt-sm class="md-raised" ng-click="close()">Close</md-button>
