Move config to root, improve config build
Move the config file to root to make it more visible. By moving the
build for config.js out of gulp build, it makes injecting custom
config.json into dist/ much easier. It also prevents having to
overwrite the src config.json.

--- a/incrowd/frontend/src/index.html
+++ b/incrowd/frontend/src/index.html
@@ -60,8 +60,7 @@
        ui-sref="invite"
        ui-sref-active="tab-active">Invite</a>
     <a class="menu-item menu-title" ng-controller="LogoutCtrl"
-       ng-click="logout()">Log
-                           out</a>
+       ng-click="logout()">Log out</a>
     <md-button hide-gt-sm class="md-raised" ng-click="close()">Close</md-button>
     <!--<a class="menu-item menu-title" ng-click="toggleLeft()">Hide Bar</a>-->
   </md-content>
@@ -123,10 +122,9 @@
 <!-- endbower -->
 <!-- endbuild -->
 
+<script src="config.js"></script>
 <!-- build:js(src) scripts/app.js -->
 <!-- angular:js -->
-<!-- endinject -->
-<!-- config:js -->
 <!-- endinject -->
 <!-- endbuild -->
 
